--- a/Data Analysis/numpy .ipynb
+++ b/Data Analysis/numpy .ipynb
@@ -277,63 +277,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ones(shape, dtype=None, order='C')\n",
+      " full(shape, fill_value, dtype=None, order='C')\n",
       "\n",
-      "Return a new array of given shape and type, filled with ones.\n",
+      "Return a new array of given shape and type, filled with `fill_value`.\n",
       "\n",
       "Parameters\n",
       "----------\n",
       "shape : int or sequence of ints\n",
       "    Shape of the new array, e.g., ``(2, 3)`` or ``2``.\n",
+      "fill_value : scalar or array_like\n",
+      "    Fill value.\n",
       "dtype : data-type, optional\n",
-      "    The desired data-type for the array, e.g., `numpy.int8`.  Default is\n",
-      "    `numpy.float64`.\n",
-      "order : {'C', 'F'}, optional, default: C\n",
-      "    Whether to store multi-dimensional data in row-major\n",
-      "    (C-style) or column-major (Fortran-style) order in\n",
-      "    memory.\n",
+      "    The desired data-type for the array  The default, None, means\n",
+      "     `np.array(fill_value).dtype`.\n",
+      "order : {'C', 'F'}, optional\n",
+      "    Whether to store multidimensional data in C- or Fortran-contiguous\n",
+      "    (row- or column-wise) order in memory.\n",
       "\n",
       "Returns\n",
       "-------\n",
       "out : ndarray\n",
-      "    Array of ones with the given shape, dtype, and order.\n",
+      "    Array of `fill_value` with the given shape, dtype, and order.\n",
       "\n",
       "See Also\n",
       "--------\n",
-      "ones_like : Return an array of ones with shape and type of input.\n",
+      "full_like : Return a new array with shape of input filled with value.\n",
       "empty : Return a new uninitialized array.\n",
+      "ones : Return a new array setting values to one.\n",
       "zeros : Return a new array setting values to zero.\n",
-      "full : Return a new array of given shape filled with value.\n",
-      "\n",
       "\n",
       "Examples\n",
       "--------\n",
-      ">>> np.ones(5)\n",
-      "array([1., 1., 1., 1., 1.])\n",
+      ">>> np.full((2, 2), np.inf)\n",
+      "array([[inf, inf],\n",
+      "       [inf, inf]])\n",
+      ">>> np.full((2, 2), 10)\n",
+      "array([[10, 10],\n",
+      "       [10, 10]])\n",
       "\n",
-      ">>> np.ones((5,), dtype=int)\n",
-      "array([1, 1, 1, 1, 1])\n",
-      "\n",
-      ">>> np.ones((2, 1))\n",
-      "array([[1.],\n",
-      "       [1.]])\n",
-      "\n",
-      ">>> s = (2,2)\n",
-      ">>> np.ones(s)\n",
-      "array([[1.,  1.],\n",
-      "       [1.,  1.]])\n"
+      ">>> np.full((2, 2), [1, 2])\n",
+      "array([[1, 2],\n",
+      "       [1, 2]])\n"
      ]
     }
    ],
    "source": [
-    "np.info(np.ones)"
+    "np.info(np.full)"
    ]
   },
   {
