--- a/Data Analysis/numpy .ipynb
+++ b/Data Analysis/numpy .ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "       [3, 4, 5]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "array([ 4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "array([ 4,  9, 14, 19, 24, 29, 34, 39, 44, 49])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,22 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0.])"
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.zeros(5)"
+    "np.zeros((3,4))"
    ]
   },
   {
@@ -230,25 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10, 10, 10, 10, 10],\n",
-       "       [10, 10, 10, 10, 10],\n",
-       "       [10, 10, 10, 10, 10],\n",
-       "       [10, 10, 10, 10, 10]])"
+       "array([[10.6, 10.6, 10.6, 10.6, 10.6],\n",
+       "       [10.6, 10.6, 10.6, 10.6, 10.6],\n",
+       "       [10.6, 10.6, 10.6, 10.6, 10.6],\n",
+       "       [10.6, 10.6, 10.6, 10.6, 10.6]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.full((4,5),10)"
+    "np.full((4,5),10.6)"
    ]
   },
   {
@@ -277,85 +279,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " full(shape, fill_value, dtype=None, order='C')\n",
+      " ones(shape, dtype=None, order='C')\n",
       "\n",
-      "Return a new array of given shape and type, filled with `fill_value`.\n",
+      "Return a new array of given shape and type, filled with ones.\n",
       "\n",
       "Parameters\n",
       "----------\n",
       "shape : int or sequence of ints\n",
       "    Shape of the new array, e.g., ``(2, 3)`` or ``2``.\n",
-      "fill_value : scalar or array_like\n",
-      "    Fill value.\n",
       "dtype : data-type, optional\n",
-      "    The desired data-type for the array  The default, None, means\n",
-      "     `np.array(fill_value).dtype`.\n",
-      "order : {'C', 'F'}, optional\n",
-      "    Whether to store multidimensional data in C- or Fortran-contiguous\n",
-      "    (row- or column-wise) order in memory.\n",
+      "    The desired data-type for the array, e.g., `numpy.int8`.  Default is\n",
+      "    `numpy.float64`.\n",
+      "order : {'C', 'F'}, optional, default: C\n",
+      "    Whether to store multi-dimensional data in row-major\n",
+      "    (C-style) or column-major (Fortran-style) order in\n",
+      "    memory.\n",
       "\n",
       "Returns\n",
       "-------\n",
       "out : ndarray\n",
-      "    Array of `fill_value` with the given shape, dtype, and order.\n",
+      "    Array of ones with the given shape, dtype, and order.\n",
       "\n",
       "See Also\n",
       "--------\n",
-      "full_like : Return a new array with shape of input filled with value.\n",
+      "ones_like : Return an array of ones with shape and type of input.\n",
       "empty : Return a new uninitialized array.\n",
-      "ones : Return a new array setting values to one.\n",
       "zeros : Return a new array setting values to zero.\n",
+      "full : Return a new array of given shape filled with value.\n",
+      "\n",
       "\n",
       "Examples\n",
       "--------\n",
-      ">>> np.full((2, 2), np.inf)\n",
-      "array([[inf, inf],\n",
-      "       [inf, inf]])\n",
-      ">>> np.full((2, 2), 10)\n",
-      "array([[10, 10],\n",
-      "       [10, 10]])\n",
+      ">>> np.ones(5)\n",
+      "array([1., 1., 1., 1., 1.])\n",
       "\n",
-      ">>> np.full((2, 2), [1, 2])\n",
-      "array([[1, 2],\n",
-      "       [1, 2]])\n"
+      ">>> np.ones((5,), dtype=int)\n",
+      "array([1, 1, 1, 1, 1])\n",
+      "\n",
+      ">>> np.ones((2, 1))\n",
+      "array([[1.],\n",
+      "       [1.]])\n",
+      "\n",
+      ">>> s = (2,2)\n",
+      ">>> np.ones(s)\n",
+      "array([[1.,  1.],\n",
+      "       [1.,  1.]])\n"
      ]
     }
    ],
    "source": [
-    "np.info(np.full)"
+    "np.info(np.ones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = np.array([1,0,4,4])\n",
+    "x = np.array([1,2,0])\n",
+    "print(x)\n",
     "np.all(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +378,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +404,7 @@
     }
    ],
    "source": [
-    "a = np.array([0,2,3,np.nan, np.inf])\n",
+    "a = np.array([0,2,3, np.nan, np.inf])\n",
     "a"
    ]
   },
@@ -594,38 +608,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0]\n",
+      " [0 0 1 0 0 0]\n",
+      " [0 0 0 1 0 0]\n",
+      " [0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 1]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(5, 5)"
+       "(6, 6)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v = np.identity(5, dtype= int)\n",
+    "v = np.identity(6, dtype= int)\n",
+    "print(v)\n",
     "\n",
     "v.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.06024838016981627"
+       "-0.3534263878028253"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,63 +663,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10, 11],\n",
-       "       [12, 13],\n",
-       "       [14, 15],\n",
-       "       [16, 17],\n",
-       "       [18, 19],\n",
-       "       [20, 21]])"
+       "array([[10, 11, 12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19, 20, 21]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = np.arange(10,22).reshape(6,2)\n",
+    "A = np.arange(10,22).reshape(2,6)\n",
     "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10, 19, 29, 39, 49])"
+       "array([10, 14, 18, 23, 27, 32, 36, 41, 45, 50])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v = np.linspace(10,49,5, dtype = int)\n",
+    "v = np.linspace(10,50, 10 , dtype = int)\n",
     "v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 4, 7, 1, 2, 9])"
+       "array([ 9, 10,  4,  1,  5,  2])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +967,7 @@
        "        [52, 53, 54]]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +987,7 @@
        "'1.19.2'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1014,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,25 +1026,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newArr[:] = 10"
+    "newArr[:] = 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10, 10, 10, 10, 10, 10, 10, 10, 10, 10])"
+       "array([200, 200, 200, 200, 200, 200, 200, 200, 200, 200])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,25 +1055,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newArr[2:4] = 200"
+    "newArr[4:6] = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([100, 100, 200, 200,  10,  10,  10,  10,  10,  10])"
+       "array([200, 200, 200, 200,  20,  20, 200, 200, 200, 200])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,16 +1100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([100, 100, 200, 200,  10,  10,  10,  10,  10,  10])"
+       "array([200, 200, 200, 200,  20,  20, 200, 200, 200, 200])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,22 +1129,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([15, 15, 15, 15, 15, 10, 10, 10, 10, 10])"
+       "array([ 15,  15,  15,  15,  15,  20, 200, 200, 200, 200])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "copy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unsorted = np.array([20,10,25,40,11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unsorted.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 20, 25, 40])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unsorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(unsorted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2d = np.arange(25).reshape(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[1][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12],\n",
+       "       [15, 16, 17],\n",
+       "       [20, 21, 22]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[2:5,:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[2:5,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3, 4],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[:2,2:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newArr = np.arange(1,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArr[newArr>5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArr[newArr==6]"
    ]
   },
   {
